compiler/tests/en/errors/const_index_write.salam
// EXPECT: E013
func main:
    const c := [1, 2, 3] as int[3]
    c[0] = 9
end
